// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditAndPreviewPage renders a page 1`] = `
<FullPage
  breadcrumbRedirectsTo="/templates"
  primaryArea={
    <React.Fragment>
      <div
        data-id="template-status"
      >
        <span>
          Draft
        </span>
        <FileEdit
          size={17}
        />
      </div>
    </React.Fragment>
  }
  title="Test Template (DRAFT)"
>
  <div>
    <EditNavigation
      primaryArea={<EditContentsPrimaryArea />}
    />
  </div>
  <div>
    <EditContents />
  </div>
  <Prompt
    message={[Function]}
    when={true}
  />
</FullPage>
`;

exports[`EditAndPreviewPage renders a page in published mode 1`] = `
<React.Fragment>
  <div
    data-id="template-status"
  >
    <span>
      Published
    </span>
    <CheckCircle
      size={17}
    />
  </div>
</React.Fragment>
`;
